Added help button for categories

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -182,7 +182,7 @@
 							<label for="work_id" class="col-md-3 control-label">Идентификатор</label>
 							<div class="col-md-9">
 								<div class="input-group">
-									<input type="text" class="form-control dinamic" id="work_id" placeholder="Идентификатор на произведението">
+									<input type="number" class="form-control dinamic" id="work_id" placeholder="Идентификатор на произведението">
 									<span class="input-group-btn">
 										<button id="go_work" type="button" class="btn btn-default">
 											<span class="glyphicon glyphicon-arrow-right"></span>
@@ -231,7 +231,7 @@
 							<label for="book_id" class="col-md-3 control-label">Идентификатор</label>
 							<div class="col-md-9">
 								<div class="input-group">
-									<input type="text" class="form-control dinamic" id="book_id" placeholder="Идентификатор на книгата">
+									<input type="number" class="form-control dinamic" id="book_id" placeholder="Идентификатор на книгата">
 									<span class="input-group-btn">
 										<button id="go_book" type="button" class="btn btn-default">
 											<span class="glyphicon glyphicon-arrow-right"></span>
